force-app/src/objects/OrderApi__Catalog__c.object
<CustomObject>
    <description>Primary control for the display of a group of Items in a Store</description>
    <fields>
        <fullName>OrderApi__Catalog_Filters__c</fullName>
        <description>Lists the filters to be displayed in the left side of the page when on the current catalog. Displays as defined in the field.</description>
        <inlineHelpText>Lists the filters to be displayed in the left side of the page when on the current catalog. Displays as defined in the field.</inlineHelpText>
        <label>Catalog Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the parent Item Catalog record. Use Item Catalog hierarchies to better organize your products and streamline your customer&apos;s online shopping cart experience.</description>
        <inlineHelpText>Link to the parent Item Catalog record. Use Item Catalog hierarchies to better organize your products and streamline your customer&apos;s online shopping cart experience.</inlineHelpText>
        <label>Parent Catalog</label>
        <referenceTo>OrderApi__Catalog__c</referenceTo>
        <relationshipLabel>Child Catalogs</relationshipLabel>
        <relationshipName>Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional description for the Item Catalog</description>
        <inlineHelpText>Optional description for the Item Catalog</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Featured_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box displays all featured items within this catalog and any child catalogs at the top of the page.</description>
        <inlineHelpText>Checking this box displays all featured items within this catalog and any child catalogs at the top of the page.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Order__c</fullName>
        <description>Display order of catalogs that will be displayed on campaign pages</description>
        <inlineHelpText>Display order of catalogs that will be displayed on campaign pages</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked access to the Catalog is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Catalog and related content.</description>
        <inlineHelpText>When checked access to the Catalog is controlled by the related user-defined Access Permissions. Defaults unchecked - essentially enabling all public and authenticated Users access to the Catalog and related content.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Catalog will be made available for display via the API. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Catalog will be made available for display via the API. Defaults unchecked.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Placeholder_Image__c</fullName>
        <description>Image to display if item does not have it&apos;s own image</description>
        <inlineHelpText>Image to display if item does not have it&apos;s own image</inlineHelpText>
        <label>Placeholder Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OrderApi__Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to related Store</description>
        <inlineHelpText>** Required ** Link to related Store</inlineHelpText>
        <label>Store</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipLabel>Catalogs</relationshipLabel>
        <relationshipName>Catalogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Catalog</label>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>